fix for maps with dark mode

--- a/httpdocs/css/dark-mode.css
+++ b/httpdocs/css/dark-mode.css
@@ -3,7 +3,7 @@ html, body {
   color: #eee;
 }
 
-svg {
+svg:not(.leaflet-zoom-animated) {
   background-color: #121212;
   color: #eee;
 }
